--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,116 +11,177 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <script>
-
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth'
+        document.addEventListener('DOMContentLoaded', function() {
+            var calendarEl = document.getElementById('calendar');
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth'
+            });
+            calendar.render();
         });
-        calendar.render();
-      });
-
     </script>
     <title>TO DO LIST</title>
 
-  </head>
-  <body>
+</head>
 
-  <main class="base-container">
-    <!-----login page----->
+<body>
 
-    <div class="loginbg">
-      <div class="login">
-  
-          <div class="login-img">
-              <img src="https://raw.githubusercontent.com/FewdGP3/FewdGP3.github.io/main/src/css/img/clipart2603183.png">
-  
-          </div>
-          <div class="login-username">
-              <div class="login-name">
-                  <section class="name">
-                      <label for="username">Username</label>
-                      <br>
-                      <input type="text" name="username" id="username">
-              </div>
-              <div class="login-password">
-                  <label for="user-pw">Password</label>
-                  <br>
-                  <input id="user-pw" type="password" name="user-pw">
-                  </section>
-              </div>
-              <div class="forgot">
-                  <a href="">Forgot password?</a>
-              </div>
-              <div class="loginbt">
-                  <input type="submit" value="LOGIN">
-              </div>
-  
-  
-          </div>
-      </div>
-  </div>
-  <!-----login page----->
+    <main class="base-container">
+        <!-----login page----->
 
-  <!-----home page-----> 
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="loginbg">
+            <div class="login">
+
+                <div class="login-img">
+                    <img src="https://raw.githubusercontent.com/FewdGP3/FewdGP3.github.io/main/src/css/img/clipart2603183.png">
+
+                </div>
+                <div class="login-username">
+                    <div class="login-name">
+                        <section class="name">
+                            <label for="username">Username</label>
+                            <br>
+                            <input type="text" name="username" id="username">
+                    </div>
+                    <div class="login-password">
+                        <label for="user-pw">Password</label>
+                        <br>
+                        <input id="user-pw" type="password" name="user-pw">
+                        </section>
+                    </div>
+                    <div class="forgot">
+                        <a href="">Forgot password?</a>
+                    </div>
+                    <div class="loginbt">
+                        <input type="submit" value="LOGIN">
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <!-----login page----->
+
+        <!-----home page----->
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fas fa-home"></i></a>
-          <a class="navbar-brand" href="#"><i class="fas fa-search"></i></a>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">User</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Task</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Setting</a>
-              </li>
-            </ul>
-          </div>
+                <a class="navbar-brand" href="#"><i class="fas fa-home"></i></a>
+                <a class="navbar-brand" href="#"><i class="fas fa-search"></i></a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">User</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Task</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Setting</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div id='calendar'></div>
+
+        <div class="media">
+            <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
+            <div class="media-body">
+                <h5 class="mt-0">Task Name</h5>
+                <p>Description</p>
+            </div>
         </div>
-    </nav>
 
-      <div id='calendar'></div>
-
-      <div class="media">
-        <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
-        <div class="media-body">
-          <h5 class="mt-0">Task Name</h5>
-          <p>Description</p>
+        <div class="media">
+            <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
+            <div class="media-body">
+                <h5 class="mt-0">Task Name</h5>
+                <p>Description</p>
+            </div>
         </div>
-      </div>
 
-      <div class="media">
-        <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
-        <div class="media-body">
-          <h5 class="mt-0">Task Name</h5>
-          <p>Description</p>
+        <div class="media">
+            <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
+            <div class="media-body">
+                <h5 class="mt-0">Task Name</h5>
+                <p>Description</p>
+            </div>
         </div>
-      </div>
 
-      <div class="media">
-        <div class="align-self-center mr-3"><i class="fab fa-creative-commons-by"></i></div>
-        <div class="media-body">
-          <h5 class="mt-0">Task Name</h5>
-          <p>Description</p>
+        <div class="d-flex justify-content-center">
+            <button type="button" class="btn btn-primary btn-lg btn-block">+</button>
         </div>
-      </div>
 
-      <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-primary btn-lg btn-block">+</button>
-      </div>
-    
-    <!-----home page----->
+        <!-----home page----->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.js" integrity="sha256-6l5QOXZ6Mkg+2tOaJgs8yT7xx2WapaIPQl7qpB55/V0=" crossorigin="anonymous"></script>
-  </main>
-  </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.js" integrity="sha256-6l5QOXZ6Mkg+2tOaJgs8yT7xx2WapaIPQl7qpB55/V0=" crossorigin="anonymous"></script>
+
+        <!--status-->
+        <hr>
+
+        <div class="status">
+            <div class="dates">
+                <div class="today">
+                    <h5>TODAY</h5>
+                </div>
+                <div class="date">
+                    <h1>17 JULY 2021</h1>
+                </div>
+            </div>
+            <hr>
+            <div class="task">
+                <div class="taskbg">
+                    <div class="taskcheck">
+                        <input type="checkbox" name="topping" id="checkbox" value="checkbox">
+                    </div>
+                    <div class="tasks">
+                        <p>xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                    </div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="taskbg">
+                    <div class="taskcheck">
+                        <input type="checkbox" name="topping" id="checkbox" value="checkbox">
+                    </div>
+                    <div class="tasks">
+                        <p>xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                    </div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="taskbg">
+                    <div class="taskcheck">
+                        <input type="checkbox" name="topping" id="checkbox" value="checkbox">
+                    </div>
+                    <div class="tasks">
+                        <p>xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                    </div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="taskbg">
+                    <div class="taskcheck">
+                        <input type="checkbox" name="topping" id="checkbox" value="checkbox">
+                    </div>
+                    <div class="tasks">
+                        <p>xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="button" class="btn btn-primary btn-lg btn-block">+</button>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+</body>
+
+
 </html>
