--- a/Description_page/index.html
+++ b/Description_page/index.html
@@ -51,7 +51,7 @@
             <div>
                 <div class="return-deescription">
                     <nav class="arrow-left-deescription">
-                        <a class="fas fa-arrow-left" aria-current="page" href="#home-page" style="text-decoration:none;"><span>Project-1</span></a>
+                        <a class="fas fa-arrow-left" href="https://fewdgp3.github.io/" style="text-decoration:none;"><span>Project-1</span></a>
                     </nav>
                 </div>
 
