--- a/Todo_page/todo.html
+++ b/Todo_page/todo.html
@@ -53,7 +53,7 @@
     <div class="status">
         <div class="dates">
             <div class="today">
-                <a class="fas fa-arrow-left" aria-current="page" href="#home-page" style="text-decoration:none;"><span>User</span></a>
+                <a class="fas fa-arrow-left" href="https://fewdgp3.github.io/" style="text-decoration:none;"><span>User</span></a>
             </div>
             <div class="date">
                 <h1>17 JULY 2021</h1>
