--- a/Todo_page/todo.html
+++ b/Todo_page/todo.html
@@ -22,8 +22,6 @@
 </head>
 <body>
     
-</body>
-</html>
 <div class="userpage">
 
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
@@ -32,8 +30,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
-            <a class="navbar-brand" href="#home-page"><i class="fas fa-home"></i></a>
-            <a class="navbar-brand" href="#home-page"><i class="fas fa-search"></i></a>
+            <a class="navbar-brand" href="../index.html"><i class="fas fa-home"></i></a>
+            <a class="navbar-brand" href="../index.html"><i class="fas fa-search"></i></a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -53,7 +51,7 @@
     <div class="status">
         <div class="dates">
             <div class="today">
-                <a class="fas fa-arrow-left" aria-current="page" href="#home-page" style="text-decoration:none;"><span>User</span></a>
+                <a class="fas fa-arrow-left" aria-current="page" href="../index.html" style="text-decoration:none;"><span>User</span></a>
             </div>
             <div class="date">
                 <h1>17 JULY 2021</h1>
@@ -119,3 +117,6 @@
     </div>
 </div>
 </div>
+
+</body>
+</html>
