--- a/login_page/index.html
+++ b/login_page/index.html
@@ -42,10 +42,10 @@
                     </section>
                 </div>
                 <div class="forgot">
-                    <a href="">Forgot password?</a>
+                    <a href="../index.html">Forgot password?</a>
                 </div>
                 <div class="loginbt">
-                    <input type="submit" value="LOGIN">
+                    <a href="../index.html">Login</a>
                 </div>
 
 
