--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="">Forgot password?</a>
                     </div>
                     <div class="loginbt">
-                        <input type="submit" value="LOGIN">
+                        <input type="submit" value="LOGIN" href="../index.html">
                     </div>
 
 
@@ -74,16 +74,6 @@
                     <a class="navbar-brand" href="#home-page"><i class="fas fa-search"></i></a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">User</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Message</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Setting</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="./Description_page/index.html">Task</a>
                             </li>
                             <li class="nav-item">
@@ -98,7 +88,8 @@
             </nav>
 
             <div id='calendar'></div>
-
+        
+        <div>
             <div class="media">
                 <div class="h-status">
                     <i class="fas fa-check-circle"></i>
@@ -141,7 +132,8 @@
                     <i class="fas fa-user-circle"></i>
                 </div>
             </div>
-
+        </div>
+        
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary btn-lg btn-block">+</button>
             </div>
