--- a/login_page/index.html
+++ b/login_page/index.html
@@ -45,7 +45,7 @@
                     <a href="">Forgot password?</a>
                 </div>
                 <div class="loginbt">
-                    <input type="submit" value="LOGIN">
+                    <input type="submit" value="LOGIN" id="loginbt">
                 </div>
 
 
