--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <a class="nav-link" href="./Description_page/index.html">Task</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Todo_page/todo.html">To DO</a>
+                                <a class="nav-link" href="Todo_page/todo.html">To DO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./login_page/index.html">Sign in</a>
