--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
             </div>
         </div>
         <!-----login page----->
+        <div class="webNav">
+            <div class="webNav2">
+                <div class="login-img">
+                    <img src="https://raw.githubusercontent.com/FewdGP3/FewdGP3.github.io/main/src/css/img/clipart2603183.png">
+                </div>
+                <div class=""></div>
+                <a href="./Description_page/index.html">Task</a>
+                <a href="./Todo_page/todo.html">To DO</a>
+                <a href="./login_page/index.html">Sign in</a>
+                
+                
 
+            </div>
+        </div>
         <!-----home page----->
         <div id=home-page class=homepage>
 
@@ -227,8 +240,8 @@
                     <div class="container-fluid">
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
                         <a class="navbar-brand" href="#home-page"><i class="fas fa-home"></i></a>
                         <a class="navbar-brand" href="#home-page"><i class="fas fa-search"></i></a>
                         <div class="collapse navbar-collapse" id="navbarNav">
