--- a/server_csv/public/login_page/index.html
+++ b/server_csv/public/login_page/index.html
@@ -9,15 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.css" integrity="sha256-RCJT6YvohmGy+rWQe3hpPZez8iaPnirFVfiwaBVCk1k=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth'
-            });
-            calendar.render();
-        });
-    </script>
     <title>TO DO LIST</title>
 </head>
 <body>
@@ -44,14 +35,14 @@
                 <div class="forgot">
                     <a href="../index.html">Forgot password?</a>
                 </div>
-                <div class="loginbt">
-                    <a href="../index.html">Login</a>
+                <section class="loginbt">
+                    <input id='enterAdd' type='submit' value='LOGIN'>
                 </div>
 
 
             </div>
         </div>
     </div>
-    
+    <script src="index.js"></script>
 </body>
 </html>
