User Page update

--- a/server_csv/public/login_page/index.html
+++ b/server_csv/public/login_page/index.html
@@ -16,7 +16,7 @@
         <div class="login">
             <div>
                 <div class="login-img">
-                    <img src="https://raw.githubusercontent.com/FewdGP3/FewdGP3.github.io/main/src/css/img/clipart2603183.png">
+                    <img src="/src/css/img/clipart2603183.png">
                 </div>
             </div>
             <div class="login-username">
