--- a/server_csv/public/index.html
+++ b/server_csv/public/index.html
@@ -107,7 +107,7 @@
                 
             <div class="user_nav_item">
                 <div class="nav-item">
-                    <h5>Name: </h5>
+                    <h5>Name: <span id='displayName'></span></h5>
                     <h5>Facebook: </h5>
                     <h5>Instagram: </h5>
                 </div>
