SignUp Page update

--- a/server_csv/public/Signup_page/index.html
+++ b/server_csv/public/Signup_page/index.html
@@ -32,14 +32,22 @@
                     <input id="user-pw" type="password" name="user-pw">
                     </section>
                 </div>
-                <div class="forgot">
-                    <a href="">Forgot Password?</a>
+                <div class="login-email">
+                    <label for="user-pw">Email</label>
+                    <br>
+                    <input id="user-pw" type="password" name="user-pw">
+                    </section>
                 </div>
-                <div class="signup">
-                    <a href="../Signup_page/index.html">Sign Up</a>
+                <div class="login-email">
+                    <label for="user-pw">Phone Num.</label>
+                    <br>
+                    <input id="user-pw" type="password" name="user-pw">
+                    </section>
+                </div>
+                
                 </div>
                 <section class="loginbt">
-                    <input id='enterAdd' type='submit' value='LOGIN'>
+                    <input id='enterAdd' type='submit' value='Sign Up'>
                 </div>
 
 
