--- a/server_csv/public/index.html
+++ b/server_csv/public/index.html
@@ -114,7 +114,7 @@
                 <hr>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="./Description_page/index.html">TASK</a>
+                        <a class="nav-link" href="Description_page/index.html">TASK</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Todo_page/todo.html">TO DO</a>
