--- a/server_csv/public/Description_page/index.html
+++ b/server_csv/public/Description_page/index.html
@@ -102,8 +102,7 @@
           <i class="fas fa-check-circle"></i>
         </div>
         <div class="media-body">
-          <h5 class="mt-0">Project-1</h5>
-          <p>Description</p>
+          <h5 class="Project"></h5>
         </div>
         <div class="assigned-to">
           <i class="fas fa-user-circle"></i>
@@ -158,6 +157,12 @@
             <div class="title-description">
                 <nav class="navbar navbar-light">
                   <div class="container-fluid">
+                    <span class="navbar-brand mb-0 h1">PROJECT</span>
+                    
+                    <div class="project-form">
+                      <textarea class="project-control" placeholder="Leave a project name here" id="floatingTextarea1">
+                    </textarea>
+                    </div>
                     <span class="navbar-brand mb-0 h1">DESCRIPTION</span>
                   </div>
                 </nav>
