--- a/server_csv/public/Description_page/index.html
+++ b/server_csv/public/Description_page/index.html
@@ -7,7 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/css/index.css">
+  <link rel="stylesheet" href="./Css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.css"
     integrity="sha256-RCJT6YvohmGy+rWQe3hpPZez8iaPnirFVfiwaBVCk1k=" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -38,7 +38,7 @@
       <div class="login">
         <div>
           <div class="login-img">
-            <img src="https://raw.githubusercontent.com/FewdGP3/FewdGP3.github.io/main/src/css/img/clipart2603183.png">
+            <img src="./Css/clipart2603183.png">
           </div>
         </div>
         <div class="login-username">
@@ -390,10 +390,10 @@
       integrity="sha256-6l5QOXZ6Mkg+2tOaJgs8yT7xx2WapaIPQl7qpB55/V0=" crossorigin="anonymous"></script>
   </main>
 
-  <script src="./popup/popup.js"></script>
-  <script src="./Description/AddonDescription.js"></script>
-  <script src="./Description/Description.js"></script>
-  <script src="./Searchbar/searchbar.js"></script>
+  <script src="./popup.js"></script>
+  <script src="./Description.js"></script>
+  <script src="./AddonDescription.js"></script>
+  <script src="./searchbar.js"></script>
 </body>
 
 </html>
