added html js css

--- a/server_csv/public/Description_page/index.html
+++ b/server_csv/public/Description_page/index.html
@@ -66,35 +66,13 @@
       </div>
 
     </div> -->
-      <div class="media">
-        <div class="h-status">
-          <i class="fas fa-check-circle"></i>
-        </div>
-        <div class="media-body">
-          <h5 class="mt-0">Project-1</h5>
-          <p>Description</p>
-        </div>
-        <div class="assigned-to">
-          <i class="fas fa-user-circle"></i>
-          <i class="fas fa-user-circle"></i>
-        </div>
-      </div>
-
-      <div class="media">
-        <div class="h-status">
-          <i class="fas fa-check-circle"></i>
-        </div>
-        <div class="media-body">
-          <h5 class="mt-0">Project-1</h5>
-          <p>Description</p>
-        </div>
-        <div class="assigned-to">
-          <i class="fas fa-user-circle"></i>
-          <i class="fas fa-user-circle"></i>
-        </div>
-      </div>
-
+    <div class="mediaList">
       
+    </div>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-primary btn-lg btn-block addTask">+</button>
+    </div>
+
 <!-- 
         </div>
         <div class="assigned-to">
