added js html css

--- a/server_csv/public/Description_page/index.html
+++ b/server_csv/public/Description_page/index.html
@@ -242,7 +242,7 @@
           
                 <div class="addonDue-date">
                   <h2><strong>Due Date</strong></h2>
-                  <input type="date" name="" id="">
+                  <input type="date" name="" id="addonDate">
                 </div>
                   
                   <button id="addonConfirm">Confirm</button>
